--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,22 +5,57 @@ on: [pull_request]
 jobs:
   unit-tests:
     name: Unit Tests
-    runs-on: "ubuntu-20.04"
+    runs-on: ubuntu-20.04
     defaults:
       run:
         shell: bash -el {0}
     steps:
       - uses: actions/checkout@v4
+
       - uses: conda-incubator/setup-miniconda@v3
         with:
           activate-environment: rcareworld
           python-version: "3.10"
+
+      - name: Cache pip packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Cache conda environment
+        uses: actions/cache@v3
+        with:
+          path: ~/.conda/envs/rcareworld
+          key: ${{ runner.os }}-conda-${{ hashFiles('**/environment.yml') }}
+          restore-keys: |
+            ${{ runner.os }}-conda-
+
       - run: |
           cd pyrcareworld
+          conda env update --name rcareworld --file environment.yml || conda env create --name rcareworld --file environment.yml
           pip install -r requirements.txt
           pip install -e .
-          pip uninstall -y numpy
-          conda install numpy
-          cd ../
 
-          pytest tests/
+      # Run each test file individually
+      - name: Run test_angle_functions.py
+        run: |
+          cd pyrcareworld
+          pytest tests/test_angle_functions.py
+
+      - name: Run test_bathing_env.py
+        run: |
+          cd pyrcareworld
+          pytest tests/test_bathing_env.py
+
+      - name: Run test_dressing_env.py
+        run: |
+          cd pyrcareworld
+          pytest tests/test_dressing_env.py
+
+      - name: Run test_save_scene.py
+        run: |
+          cd pyrcareworld
+          pytest tests/test_save_scene.py
