--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,27 +17,13 @@ jobs:
           activate-environment: rcareworld
           python-version: "3.10"
 
-      - name: Cache pip packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Cache conda environment
-        uses: actions/cache@v3
-        with:
-          path: ~/.conda/envs/rcareworld
-          key: ${{ runner.os }}-conda-${{ hashFiles('**/environment.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-conda-
-
       - run: |
           cd pyrcareworld
-          conda env update --name rcareworld --file environment.yml || conda env create --name rcareworld --file environment.yml
           pip install -r requirements.txt
           pip install -e .
+          pip uninstall -y numpy
+          conda install numpy
+          cd ../
 
       # Run each test file individually
       - name: Run test_angle_functions.py
