--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
           conda install numpy
           cd ../
           pytest tests/test_angle_functions.py
+          pytest tests/test_dressing_env.py
 
       #     cd pyrcareworld
       #     pytest tests/test_bathing_env.py
