Test save scene.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
           cd ../
           pytest tests/test_angle_functions.py
           pytest tests/test_dressing_env.py
+          pytest tests/test_save_scene.py
 
       #     cd pyrcareworld
       #     pytest tests/test_bathing_env.py
