--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           pytest tests/test_angle_functions.py
           pytest tests/test_dressing_env.py
+          pytest -s tests/test_save_scene.py
           pytest -s tests/test_bathing_env.py
-          pytest tests/test_save_scene.py
+          
           
