--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 .zip filter=lfs diff=lfs merge=lfs -text
 template/Bathing/10-7[[:space:]]RCareToborFix_Data/StreamingAssets/aa/StandaloneLinux64/user_assets_all_8a7e8c517c5bd193b6a83d9a3d7b4a7a.bundle filter=lfs diff=lfs merge=lfs -text
 template/Bathing/BathingPlayer_Data/StreamingAssets/aa/StandaloneLinux64/user_assets_all_8a7e8c517c5bd193b6a83d9a3d7b4a7a.bundle filter=lfs diff=lfs merge=lfs -text
+template/Bathing/BathingPlayer_Data/StreamingAssets/aa/StandaloneLinux64/user_assets_all_752a0ed37435299b38372bf214d395b3.bundle filter=lfs diff=lfs merge=lfs -text
+template/Bathing/BathingPlayer_Data/StreamingAssets/aa/StandaloneLinux64/user_assets_all_2308b64dbb01817506c542159ebf007a.bundle filter=lfs diff=lfs merge=lfs -text
 template/Bathing/BathingPlayer_Data/StreamingAssets/aa/StandaloneLinux64/*.bundle filter=lfs diff=lfs merge=lfs -text
