--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 .zip filter=lfs diff=lfs merge=lfs -text
 template/Bathing/10-7[[:space:]]RCareToborFix_Data/StreamingAssets/aa/StandaloneLinux64/user_assets_all_8a7e8c517c5bd193b6a83d9a3d7b4a7a.bundle filter=lfs diff=lfs merge=lfs -text
 template/Bathing/BathingPlayer_Data/StreamingAssets/aa/StandaloneLinux64/user_assets_all_8a7e8c517c5bd193b6a83d9a3d7b4a7a.bundle filter=lfs diff=lfs merge=lfs -text
+pyrcareworld/pyrcareworld/demo/executable/Player/Player_Data/StreamingAssets/aa/StandaloneLinux64/user_assets_all_f357883c84a80231486b0404b1dc2f9f.bundle filter=lfs diff=lfs merge=lfs -text
+pyrcareworld/pyrcareworld/demo/executable/Player/Player_Data/StreamingAssets/aa/StandaloneLinux64/robot_assets_all_603be05fcb8dffa1ad805fc756b51160.bundle filter=lfs diff=lfs merge=lfs -text
