--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,5 @@ jobs:
       - name: Run unit tests
         run: |
           echo "::group::Running tests"
-          pytest --capture=tee-sys tests/test_bathing.py
+          pytest --capture=tee-sys tests/test_bathing_env.py
           echo "::endgroup::"    
